log/build_2022-05-13_18-33-26/xsens_driver/stderr.log
  File "/app/dev_ws/install/xsens_driver/lib/python3.8/site-packages/xsens_driver/xsens_measure.py", line 277
    if self.sta_sw_msg.sync_in or self.sta_sw_msg.sync_out
                                                         ^
SyntaxError: invalid syntax

